# trailerpark

./: .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  railway.toml
backend/: .env.example  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial.py  002_add_gmail_sync_state.py  003_add_glossary.py  004_add_feedback.py  005_add_transparency.py
backend/docs/: plan-jargon-feedback.md
backend/src/: config.py  database.py  main.py  models.py  schemas.py  seed.py  setup_gmail.py
backend/src/routers/: attachments.py  auth.py  benchmarks.py  buyers.py  deals.py  emails.py  feedback.py  glossary.py  listings.py  matches.py  stats.py
backend/src/services/: archiver.py  attachment_extractor.py  backup.py  deal_detector.py  deduplicator.py  email_ingestion.py  glossary.py  glossary_seed.py  gmail_client.py  llm_parser.py  matcher.py
backend/src/tasks/: scheduler.py
backend/tests/: conftest.py  test_archiver.py  test_deal_detector.py  test_deduplicator.py  test_llm_parser.py  test_matcher.py
backend/tests/test_routers/: test_benchmarks.py  test_deals.py  test_listings.py  test_matches.py
docs/: power-automate-setup.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BenchmarkForm.tsx  BuyerCard.tsx  DealBadge.tsx  FilterBar.tsx  Layout.tsx  ListingCard.tsx  ListingDetail.tsx  MatchCard.tsx  Pagination.tsx  SearchInput.tsx  (+2 more)
scripts/: install-task-scheduler.ps1  setup.bat  start-server.sh  start.bat  start.sh
(+14 files in other folders)
