[project]
name = "trailerpark"
version = "0.1.0"
description = "Trailer and truck listing email aggregator with deal detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "openai>=1.60",
    "pymupdf>=1.25",
    "openpyxl>=3.1",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.7",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
